Java 11 client kirjeiden Haku-App pyyntöihin